Renamed login.html to index.html and corrected pathing

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -16,7 +16,7 @@
             <a href="#">Accounts</a>
             <a href="#">Transactions</a>
             <a href="#">Settings</a>
-            <a href="../login.html" class="logout">Logout</a>
+            <a href="../index.html" class="logout">Logout</a>
           </nav>
         </aside>
       
