--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -54,6 +54,10 @@
                 <h3>Internet Bill</h3>
                 <h3>Bank Statement</h3>
               </div>
+              <br>
+              <div class="all-services">
+                  <h3>View All Services</h3>
+              </div>
             </div>
       
             <div class="card exchange-rates">
